--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1009,7 +1009,9 @@ textarea {
 }
 .navbar .navbar__menu li a,
 .navbar .navbar__menu li span[aria-haspopup=true] {
-  color: var(--white);
+  color: var(--color);
+  background: var(--dark);
+  border-radius: 25px;
   display: block;
   padding: 0.2428571429rem 0.7285714286rem;
   -webkit-transition: all 0.24s ease-out;
@@ -1031,16 +1033,16 @@ textarea {
   margin-left: 0.2428571429rem;
 }
 .navbar .navbar__menu > li.active > a, .navbar .navbar__menu > li.active > span, .navbar .navbar__menu > li.active-parent > a, .navbar .navbar__menu > li.active-parent > span {
-  border-radius: 4px;
+  border-radius: 25px;
   background: var(--color));
 }
 .navbar .navbar__menu > li.has-submenu > a, .navbar .navbar__menu > li.has-submenu > span {
   padding-right: 1.4571428571rem;
 }
 .navbar .navbar__menu > li:hover > a, .navbar .navbar__menu > li:hover > span[aria-haspopup=true] {
-  border-radius: 4px;
-  color: var(--white);
-  background: var(--color);
+  border-radius: 25px;
+  color: var(--color);
+  background: var(--dark);
 }
 .navbar .has-submenu:active > .navbar__submenu,
 .navbar .has-submenu:focus > .navbar__submenu,
@@ -1093,7 +1095,7 @@ textarea {
   margin-top: 0;
 }
 .navbar .navbar__submenu {
-  background: var(--color);
+  background: var(--dark);
   border-radius: 4px;
   -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
           box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
@@ -1124,10 +1126,10 @@ textarea {
   font-weight: var(--font-weight-normal);
   letter-spacing: normal;
   text-transform: none;
-}
+} 
 .navbar .navbar__submenu li a,
 .navbar .navbar__submenu li span[aria-haspopup=true] {
-  color: var(--white) !important;
+  color: var(--color) !important;
   padding: 0.4857142857rem 1.2142857143rem;
   -webkit-transition: all 0.24s ease;
   transition: all 0.24s ease;
