--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1200,7 +1200,7 @@ textarea {
 .navbar .navbar__toggle-inner, .navbar .navbar__toggle-inner::before, .navbar .navbar__toggle-inner::after {
   width: 22px;
   height: 2px;
-  background-color: #ff0101;
+  background-color: var(--color);
   position: absolute;
   -webkit-transition: opacity 0.14s ease-out, -webkit-transform;
   transition: opacity 0.14s ease-out, -webkit-transform;
@@ -1320,7 +1320,7 @@ textarea {
 }
 
 .navbar_mobile_sidebar {
-  background: var(--bg);
+  background: var(--dark);
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
   height: 100vh;
