--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2935,3 +2935,19 @@ textarea {
 .pswp--light .pswp__caption__center {
   color: var(--text-color);
 }
+
+.breadcrumbs {
+  display: flex;
+  justify-content: flex-start;
+  list-style: none;
+  margin: 0;
+}
+
+.breadcrumbs li {
+  padding-right: 0.5rem;
+  color: var(--h3-h5);
+}
+
+.breadcrumbs li:nth-child(1) {
+  padding-left: 0;
+}
