--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2934,6 +2934,8 @@ textarea {
   justify-content: flex-start;
   list-style: none;
   margin: 0;
+  font-size: small;
+  font-weight: 400;
 }
 
 .breadcrumbs li {
