--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,7 @@ html {
 
 body {
   background: linear-gradient(to bottom, #232526, #414345);
-  color: var(--text-color);
+  color: #ededed;
   font-family: var(--body-font);
   font-weight: var(--font-weight-normal);
   line-height: var(--line-height);
@@ -162,7 +162,7 @@ h6 {
   font-family: var(--heading-font);
   font-weight: var(--headings-weight);
   line-height: 1.3;
-  margin-top: 2.1857142857rem;
+  margin-top: 0.8rem;
 }
 
 h1,
@@ -325,26 +325,29 @@ dl dt {
 }
 
 code {
-  background-color: rgba(var(--color-rgb), 0.1);
+  background: linear-gradient(90deg, #404040, #5c5c5c, #707070);
+  background-attachment: fixed;
   border-radius: 12px;
-  color: var(--color);
+  color: #ededed;
   font-size: 0.9374999997rem;
   font-family: "Monaco", "Courier New", monospace;
   padding: 0.2428571429rem 0.4857142857rem;
+  font-weight: 400;
 }
 
 pre {
-    background-color: var(--lighter);
     border-radius: 15px;
     font-size: .9374999997rem;
     padding: 0.6em;
     white-space: pre-wrap!important;
     word-wrap: break-word;
     width: 100%;
-    background: linear-gradient(to right, #141e30, #243b55);
+    background: linear-gradient(90deg, #404040, #5c5c5c, #707070);
+    background-attachment: fixed;
 }
 pre code {
-  background-color: var(--lighter);
+  background: linear-gradient(90deg, #404040, #5c5c5c, #707070);
+  background-attachment: fixed;
   color: inherit !important;
   font-size: inherit;
   padding: 0;
@@ -365,7 +368,8 @@ table th {
   padding: 0.7285714286rem 1.2142857143rem;
 }
 table tr:nth-child(2n) {
-  background: var(--lighter);
+  background: linear-gradient(90deg, #404040, #5c5c5c, #707070);
+  background-attachment: fixed;
 }
 table td {
   padding: 0.7285714286rem 1.2142857143rem;
@@ -1835,11 +1839,11 @@ textarea {
       -ms-flex-align: center;
           align-items: center;
  /* border-bottom: 1px solid var(--border-color-light); */
-  color: var(--gray-1);
+  color: #ededed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 0.7241964329rem;
+  font-size: .8241964329rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
