--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1826,7 +1826,7 @@ textarea {
   background: var(--dark);
 }
 .u-tag--1 {
-  background: #ff8f00;
+  background: #000000;
 }
 .u-tag--2 {
   background: #ec407a;
