--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1526,8 +1526,9 @@ textarea {
 .authors__title {
   display: block;
   font-family: var(--heading-font);
-  font-weight: var(--headings-weight);
+  font-weight: 400;
   line-height: 1.3;
+  font-size: medium;
 }
 
 .authors__item {
@@ -1556,7 +1557,11 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-weight: var(--headings-weight);
+  display: block;
+  font-family: var(--heading-font);
+  font-weight: 400;
+  line-height: 1.3;
+  font-size: medium;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -2016,8 +2021,8 @@ textarea {
 }
 .post__featured-image > img {
   display: block;
-  height: 100%;
-  width: 100%;
+  height: auto;
+  width: 1200px;
 }
 .post__featured-image > figcaption {
   background: var(--dark);
@@ -2096,6 +2101,8 @@ textarea {
 .post__image > img {
   border-radius: var(--border-radius);
   display: inline-block;
+  width: 1200px;
+  height: auto;
 }
 .post__image--left {
   float: left;
@@ -2667,8 +2674,8 @@ textarea {
   line-height: 24px;
 }
 .pagination__item > svg {
-  height: 24px;
-  width: 24px;
+  height: 30px;
+  width: 30px;
   vertical-align: top;
   -webkit-transition: all 0.24s ease-out;
   transition: all 0.24s ease-out;
